--- a/Reach/Base.lproj/Main.storyboard
+++ b/Reach/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Y4y-u1-9II">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,22 +9,208 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Feed-->
+        <scene sceneID="dOa-db-M20">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Reach" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="1T4-rQ-HcI" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="zlb-Y0-DJz"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gfo-jz-5EK"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="bs0-ha-hlZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Feed" id="AvD-ou-NiB"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sn4-1o-fOj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="958" y="461"/>
+        </scene>
+        <!--Create Event-->
+        <scene sceneID="J40-Qi-jx1">
+            <objects>
+                <tableViewController id="Xfy-sg-G8r" customClass="CreateEventTableViewController" customModule="Reach" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="5Ly-x9-Pkp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DefaultEventCell" textLabel="sEY-rp-ujz" style="IBUITableViewCellStyleDefault" id="XNC-ua-ybt">
+                                <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XNC-ua-ybt" id="jRN-5O-zWn">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sEY-rp-ujz">
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Xfy-sg-G8r" id="kyc-Mj-AwL"/>
+                            <outlet property="delegate" destination="Xfy-sg-G8r" id="QK0-ec-iYX"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Create Event" id="4WK-th-b6Y"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RvP-SM-cQu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1896.8" y="1131.1844077961021"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="Ru2-Bf-VNt">
+            <objects>
+                <viewController id="5Ga-PW-N0u" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ow2-u3-Bio"/>
+                        <viewControllerLayoutGuide type="bottom" id="ocw-9P-vbF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4VB-o2-AXy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="HSB-7N-57t"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="shz-EY-LqV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="958" y="1805"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="lNW-l2-Hpb">
+            <objects>
+                <viewController id="QRm-Gl-ILX" customClass="MapViewController" customModule="Reach" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ckB-tc-e4j"/>
+                        <viewControllerLayoutGuide type="bottom" id="3fs-nK-6JT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Uzq-do-PQk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JgB-Q4-2QB">
+                                <rect key="frame" x="0.0" y="28" width="375" height="590"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QTD-QA-Waw">
+                                <rect key="frame" x="309" y="53" width="35" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Filter"/>
+                                <connections>
+                                    <segue destination="4xQ-jR-yJs" kind="presentation" identifier="filterSegue" id="Vyz-lZ-uCV"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Map" id="0Z2-kA-1F7"/>
+                    <connections>
+                        <outlet property="mapView" destination="JgB-Q4-2QB" id="uqb-eg-YC5"/>
+                        <segue destination="rdy-Uf-yEt" kind="show" identifier="showEvent" id="hlh-HW-xUB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h3Y-4h-7wZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957.60000000000002" y="-194.75262368815595"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="TNJ-Bb-Rpb">
+            <objects>
+                <viewController id="rdy-Uf-yEt" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Oms-Ah-nWi"/>
+                        <viewControllerLayoutGuide type="bottom" id="pcD-mf-sXC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Q7Z-XE-nrM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TNb-th-CyX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1726" y="-193"/>
+        </scene>
+        <!--Filter View Controller-->
+        <scene sceneID="wXO-oU-OK0">
+            <objects>
+                <viewController id="4xQ-jR-yJs" customClass="FilterViewController" customModule="Reach" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Udr-gO-FE4"/>
+                        <viewControllerLayoutGuide type="bottom" id="aTE-d6-yye"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Xae-1M-Biq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C0Y-cz-wH2">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Filter" id="OWZ-sq-sxR">
+                                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="k1t-2j-kH5">
+                                            <connections>
+                                                <action selector="done:" destination="4xQ-jR-yJs" id="ZhZ-XV-mXS"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pwb-sg-KKu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="958" y="-880"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Oqp-HE-wG8">
+            <objects>
+                <tabBarController id="Y4y-u1-9II" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="wuF-rP-OzO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="QRm-Gl-ILX" kind="relationship" relationship="viewControllers" id="5bw-ai-EsL"/>
+                        <segue destination="1T4-rQ-HcI" kind="relationship" relationship="viewControllers" id="RIT-3T-kzt"/>
+                        <segue destination="VKv-BM-Veo" kind="relationship" relationship="viewControllers" id="oQY-5f-uTt"/>
+                        <segue destination="5Ga-PW-N0u" kind="relationship" relationship="viewControllers" id="JcM-zG-esh"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q3A-Ih-aUp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6" y="134"/>
+        </scene>
+        <!--Create-->
+        <scene sceneID="dli-0f-sjI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VKv-BM-Veo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Create" id="e96-K7-mTe"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rgo-zi-cho">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Xfy-sg-G8r" kind="relationship" relationship="rootViewController" id="hL7-n4-rdh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VHh-H4-o3w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957.60000000000002" y="1131.1844077961021"/>
         </scene>
     </scenes>
 </document>
